# chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
app/: api.py  bot_settings.py  buffer.py  config.py  db.py  graph.py  main.py  media.py  memory.py  splitter.py  test_mode.py  worker.py
app/agents/: extractor.py  m1_faq.py  m2_agendamiento.py  m3_catalogo.py  m4_seguimiento.py  router.py
app/channels/: manychat.py  telegram.py
app/prompts/: m1_faq.md  m2_agendamiento.md  m3_catalogo.md  m4_seguimiento.md  router.md  vision.md
app/tools/: cal.py  contactos.py  hubspot.py  properties.py
supabase/migrations/: 001_message_buffer.sql
tests/: test_manychat_parse.py  test_splitter.py  test_telegram_parse.py
